for more details, see http://svn.sourceforge.net/viewcvs.cgi/psycle/trunk/?view=log

2006-03-16 psycle 1.9.7 bohan

	* reviewed numeric type sizes in psycle::host::Song::Save and prettified it
	* old fileformat loaders: moved remaining code to psycle/host/legacy/old_file_format.cpp.
	
2006-03-15 psycle 1.9.7 bohan

	* moved changlog from src/psycle/host/version.hpp to a newly created Changelog file
	  and also added files NEWS and TODO, with just a little text referring to the corresponding files of the doc dir.
	* microsofism->std: in function signatures, removed "throw(...)" which is implicit anyway.
	* microsofism->std: corrected a few syntactic problems where the name of a variable was the same as its type.
	* microsofism->std: removed some unused MFC CString in the VST host that was already replaced with std::string.
	* microsofism->std: replaced microsoft's _strlwr with std::tolower in psycle::host::Plugin::LoadOldFileFormat(RiffFile*).
	* old fileformat loaders: changed compiler numeric types to std::*int_t and moved code to psycle/host/legacy/old_file_format.cpp.
	* changed a bit the initialization of the static psycle::host::logger::default_logger_ostream() in psycle/host/global.cpp.
	* plugin dir: temporary work around for msvc8 manifests.
	* replaced most of src/legacy with src/universalis ; only src/legacy/loggers.{c,h}pp left.
	* src/legacy/operating_system/logger.cpp: fixed a #if which was taking out some code that should have been enabled on mswindows.
	* 64-bit: got rid of a few size reduction problems.

2006/03/13 20:35:04  jaz001

	* Fix for EOL (now for sure, windiff says it)

2006/03/12 20:11:17  jaz001

	* fixed wrong EOL coming from recent commits.

2006/03/09 18:44:10  johan-boule

	* increasing version after tagging

2006/03/09 18:41:53  johan-boule

	* increasing version and tagging

2006/03/09 17:56:43  johan-boule

	* more work on portability

2006/03/07 14:09:14  johan-boule

	* replaced some ms numeric types with std types